# SwingRL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/commands/: ci-local.md  docker-build.md  lint.md  test.md  typecheck.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  POSTGRES_MIGRATION_PLAN.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-dev-foundation/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  deferred-items.md
.planning/phases/02-developer-experience/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-data-ingestion/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-data-storage-and-validation/: 04-01-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VALIDATION.md
.planning/phases/05-feature-engineering/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-05-PLAN.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-rl-environments/: 06-01-SUMMARY.md  06-03-PLAN.md
.planning/phases/07-agent-training-and-validation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md  07-CONTEXT.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-paper-trading-core/: 08-01-PLAN.md  08-05-PLAN.md  08-05-SUMMARY.md  08-RESEARCH.md
.planning/phases/09-automation-and-monitoring/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-production-hardening/: 10-01-PLAN.md  10-02-SUMMARY.md  10-06-PLAN.md  10-07-PLAN.md  10-07-SUMMARY.md  10-08-PLAN.md  10-08-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md
.planning/phases/11-production-startup-wiring/: 11-01-PLAN.md  11-CONTEXT.md  11-RESEARCH.md
.planning/phases/12-schema-alignment-and-emergency-triggers/: 12-01-PLAN.md  12-01-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-model-path-fix-and-reconciliation/: 13-RESEARCH.md  13-VERIFICATION.md
.planning/phases/14-feature-pipeline-wiring/: 14-01-PLAN.md  14-VERIFICATION.md
.planning/phases/15-training-cli-observation-assembly/: 15-01-PLAN.md  15-01-SUMMARY.md
.planning/phases/16-crypto-stop-price-persistence/: 16-01-PLAN.md  16-01-SUMMARY.md  16-RESEARCH.md  16-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  a2c-general-tuning.md  algo-reward-shaping.md  hp-tuning-reference.md  iter4-analysis-and-qa.md  ppo-general-tuning.md  reward-shaping-vs-hyperparameters.md  sac-crypto-tuning.md  sac-general-tuning.md
config/: swingrl.prod.yaml.example  swingrl.yaml
dashboard/: Dockerfile.dashboard  app.py  requirements.txt
dashboard/pages/: 1_Portfolio.py  2_Trade_Log.py  3_Risk_Metrics.py  4_System_Health.py
docs/: TRAINING_RUNBOOK.md
notebooks/: weekly_review.ipynb
scripts/: backtest.py  ci-homelab.sh  compare_features.py  compute_features.py  deploy_model.sh  disaster_recovery.py  emergency_stop.py  healthcheck.py  init_db.py  key_rotation_runbook.sh  main.py  manual_cross_algo_consolidation.py  migrate_to_postgres.py  reconcile.py  reset_halt.py  retire_iter3_patterns.py  run_cycle.py  run_iterations.sh  security_checklist.py  seed_memory_from_backtest.py  seed_production.py  setup_ollama.sh  train.py  train_pipeline.py  validate_memory.py
services/memory/: .dockerignore  Dockerfile  __init__.py  app.py  auth.py  cleanup_patterns.py  db.py  main.py  requirements.txt
src/swingrl/: __init__.py
tests/: conftest.py  test_config.py  test_deploy_smoke.py  test_disaster_recovery.py  test_emergency_stop.py  test_envs.py  test_memory_service.py  test_phase14.py  test_phase15.py  test_retry.py  test_security.py  test_smoke.py
tests/agents/: test_backtest.py  test_metrics.py  test_validation.py
tests/backup/: test_duckdb_backup.py  test_sqlite_backup.py
tests/config/: test_schema.py
tests/dashboard/: test_pages.py
tests/data/: test_alpaca_ingestor.py  test_binance_ingestor.py  test_corporate_actions.py  test_cross_source.py  test_db.py  test_fred_ingestor.py  test_gap_fill.py  test_ingest_all.py  test_ingestion_logging.py  test_parquet_store.py  test_parquet_to_duckdb.py  test_validation.py  test_verification.py
tests/execution/: conftest.py  test_alpaca_adapter.py  test_binance_sim.py  test_circuit_breaker.py  test_fill_processor.py  test_order_validator.py  test_pipeline.py  test_position_sizer.py  test_position_tracker.py  test_reconciliation.py  test_risk_manager.py  test_signal_interpreter.py
tests/features/: conftest.py  test_assembler.py  test_config_and_schema.py  test_correlation.py  test_fundamentals.py  test_health.py  test_hmm_regime.py  test_macro.py  test_normalization.py  test_pipeline.py  test_technical.py  test_turbulence.py
tests/memory/: conftest.py  test_bounds.py  test_client.py  test_curriculum.py  test_epoch_callback_extended.py  test_meta_orchestrator.py  test_reward_wrapper.py  test_trainer_memory_wiring.py
tests/monitoring/: test_alerter.py  test_embeds.py  test_stuck_agent.py  test_wash_sale.py
tests/scheduler/: test_halt_check.py  test_healthcheck_ping.py  test_jobs.py  test_main.py  test_stop_polling.py
tests/sentiment/: test_ab_experiment.py  test_finbert.py
tests/shadow/: test_lifecycle.py  test_promoter.py  test_shadow_runner.py
tests/training/: conftest.py  test_callbacks.py  test_ensemble.py  test_pipeline.py  test_pipeline_helpers.py  test_train_pipeline.py  test_trainer.py
tests/utils/: test_file_logging.py  test_utils.py
(+252 files in other folders)
